Adding API test for projects

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,2 +1,3 @@
-LOGIN=qasetestako@mailinator.com
-PASSWORD=qasetestako@mailinator.com
+LOGIN=<Insert login here>
+PASSWORD=<Insert password here>
+API_TOKEN=<Insert API token here>
