--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-LOGIN=<Insert login here>
-PASSWORD=<Insert password here>
-API_TOKEN=<Insert API token here>
+LOGIN=arimelka@yandex.by
+PASSWORD=Q033008061zxcv
+API_TOKEN=70c308e9c09568164087e115ad6d245daeec9f57
